--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "script.js",
   "dependencies": {
+    "express": "^4.17.1",
     "face-api.js": "^0.21.0",
     "live-server": "^1.2.1"
   },
