--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "script.js",
   "dependencies": {
+    "axios": "^0.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "face-api.js": "^0.21.0",
     "live-server": "^1.2.1"
