--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "main": "script.js",
   "dependencies": {
     "axios": "^0.19.1",
+    "config": "^3.2.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.3.1",
     "face-api.js": "^0.21.0",
-    "live-server": "^1.2.1"
+    "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "live-server": "^1.2.1",
+    "mongoose": "^5.8.11",
+    "node_module": "0.0.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
