--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "live-server": "^1.2.1",
     "mongoose": "^5.8.11",
     "node_module": "0.0.0",
+    "proxy": "^1.0.1",
     "request": "^2.88.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
   "scripts": {
     "start": "live-server .",
+    "server": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
